* chore(package.json): update extension name and display name * chore(generate-ai-commit.ts): update quick pick title to Chinese * chore(generate-ai-commit.ts): update progress title to Chinese * chore(chatgpt-msg-generator.ts): update initial prompt content to Chinese * chore(chatgpt-msg-generator.ts): update assistant response content to include emojis

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gpt-commit",
-  "displayName": "GPT Commit",
+  "name": "li-gpt-commit",
+  "displayName": "GPT Commit@Li",
   "description": "VS Code extension which helps to generate AI commit messages using ChatGPT",
   "version": "1.0.5",
   "homepage": "https://github.com/dmytrobaida/GPTCommitVSCode#readme",
