--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "li-gpt-commit",
   "displayName": "GPT Commit@Li",
-  "description": "VS Code extension which helps to generate AI commit messages using ChatGPT",
+  "description": "VS Code extension which helps to generate AI commit messages using ChatGPT(中文支持)",
   "version": "1.0.5",
   "homepage": "https://github.com/dmytrobaida/GPTCommitVSCode#readme",
   "bugs": "https://github.com/dmytrobaida/GPTCommitVSCode/issues",
@@ -13,7 +13,7 @@
   "engines": {
     "vscode": "^1.76.0"
   },
-  "publisher": "DmytroBaida",
+  "publisher": "liuhuapiaoyuan",
   "categories": [
     "Other",
     "SCM Providers"
