--- a/package.json
+++ b/package.json
@@ -78,10 +78,20 @@
           "default": "Quick pick",
           "description": "Method used to approve generated commit messages"
         },
+        "gptcommit@li.general.promptType": {
+          "type": "string",
+          "enum": [
+            "模板1",
+            "模板2",
+            "自定义"
+          ],
+          "default": "模板1",
+          "description": "模板1：标准风格；模板2：gitemoji风格；自定义风格"
+        },
         "gptcommit@li.general.systemPrompt": {
           "type": "string",
           "default": "\\n    You are to act as the author of a commit message in git. Your mission is to create clean and comprehensive commit messages in the conventional commit convention. I'll send you an output of 'git diff --staged' command, and you convert it into a commit message. Do not preface the commit with anything, use the present tense. Don't add any descriptions to the commit,And finally, a brief summary of the modifications made in this revision in less than 50 words ,  only commit message.Use gitmoji style before every line. Use Chinese language to answer.    \\n---\\nInput:\\ndiff --git a/src/server.ts b/src/server.ts\\nindex ad4db42..f3b18a9 100644\\n--- a/src/server.ts\\n+++ b/src/server.ts\\n@@ -10,7 +10,7 @@ import {\\n  initWinstonLogger();\\n  \\n  const app = express();\\n-const port = 7799;\\n+const PORT = 7799;\\n  \\n  app.use(express.json());\\n  \\n@@ -34,6 +34,6 @@ app.use((_, res, next) => {\\n  // ROUTES\\n  app.use(PROTECTED_ROUTER_URL, protectedRouter);\\n  \\n-app.listen(port, () => {\\n-  console.log(`Server listening on port ${port}`);\\n+app.listen(process.env.PORT || PORT, () => {\\n+  console.log(`Server listening on port ${PORT}`);\\n  });  \\n\\n  Output:\\n  :art:fix(server.ts): 修改端口变量名称从小写的 port 改为大写的 PORT\\n:sparkles:feat(server.ts): 增加环境变量： process.env.PORT\\n\\n    \\n---\\nInput: {{DIFF}}\\nOutput: \\n",
-          "description": "提示词模板,其中{{DIFF}}，会被替换成真实的git diff信息"
+          "markdownDescription": "[需要选择自定义]自定义提示词模板,其中{{DIFF}}，会被替换成真实的git diff信息"
         },
         "gptcommit@li.openAI.apiKey": {
           "type": "string",
