--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
       "properties": {
         "gptcommit@li.appearance.delimeter": {
           "type": "string",
-          "default": "*",
+          "default": "",
           "description": "Delimeter between commit lines"
         },
         "gptcommit@li.general.generator": {
