* chore(package.json): 修改 package 脚本，使用 pnpm 进行打包和发布

--- a/package.json
+++ b/package.json
@@ -137,8 +137,8 @@
     "build": "npm run esbuild-base -- --sourcemap",
     "watch": "npm run esbuild-base -- --sourcemap --watch",
     "lint": "eslint src --ext ts",
-    "package": "vsce package -o packages",
-    "package:publish": "vsce publish"
+    "package": "pnpm vsce package -o packages",
+    "package:publish": "pnpm vsce publish --no-yarn --no-dependencies"
   },
   "devDependencies": {
     "@types/glob": "^8.1.0",
